add ifs-fesom missing sources

--- a/config/machines/lumi/catalog/IFS-FESOM/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-FESOM/historical-1990.yaml
@@ -1,5 +1,5 @@
 sources: 
-  hourly-native: &base-default
+  hourly-native-atm2d: &base-default
     args: &args-default
       request: &request-default
         #domain: g
@@ -35,8 +35,8 @@ sources:
       variables: [78, 79, 134, 137, 141, 148, 151, 159, 164, 165, 166, 167, 168, 186, 187, 188, 235, 260048, 8, 9, 144, 146, 147, 169, 175, 176, 177, 178, 179, 180, 181, 182, 212, 228]
       source_grid_name: tco1279
       fixer_name: ifs-destine-v1
-  
-  hourly-native-3d:
+ 
+  hourly-native-atm3d:
     <<: *base-default
     description: hourly 3D atmospheric data on native grid TCo1279 (about 10km).
     args:
@@ -53,7 +53,7 @@ sources:
       levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
       variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
 
-  hourly-hpxstd:
+  hourly-hpxstd-atm2d:
     <<: *base-default
     description: hourly 2D atmospheric data on healpix grid (zoom=7, h128).
     args:
@@ -66,7 +66,27 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/production_fdb_tco1279_historic/HEALPix_grids/etc/fdb/config.yaml
       source_grid_name: ifs-healpix
 
-  hourly-hpxhigh:
+  hourly-hpxstd-atm3d:
+    <<: *base-default
+    description: hourly 3D atmospheric data on healpix grid (zoom=7, h128).
+    args:
+      <<: *args-default
+      aggregation: 6H
+      request:
+        <<: *request-default
+        resolution: standard
+        param: 131
+        levtype: pl
+        levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
+          700, 850, 925, 1000]
+    metadata:
+      <<: *metadata-default
+      fdb_path: /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
+      source_grid_name: ifs-healpix
+      levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
+      variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
+
+  hourly-hpxhigh-atm2d:
     <<: *base-default
     description: hourly 2D atmospheric data on healpix grid (zoom=10, h1024).
     args:
@@ -78,8 +98,28 @@ sources:
       <<: *metadata-default
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/production_fdb_tco1279_historic/HEALPix_grids/etc/fdb/config.yaml
       source_grid_name: ifs-healpix
+  
+  hourly-hpxhigh-atm3d:
+    <<: *base-default
+    description: hourly 3D atmospheric data on healpix grid (zoom=10, h1024).
+    args:
+      <<: *args-default
+      aggregation: 6H
+      request:
+        <<: *request-default
+        resolution: high
+        param: 131
+        levtype: pl
+        levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
+          700, 850, 925, 1000]
+    metadata:
+      <<: *metadata-default
+      fdb_path: /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
+      source_grid_name: ifs-healpix
+      levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
+      variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
 
-  hourly-r025:
+  hourly-r025-atm2d:
     <<: *base-default
     description: hourly 2D atmospheric data on regular r025 grid (1440x721).
     args:
@@ -90,9 +130,9 @@ sources:
     metadata:
       <<: *metadata-default
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/production_fdb_tco1279_historic/REGULARLL_grids/etc/fdb/config.yaml
-      source_grid_name: lon-lat
-
-  hourly-r025-3d:
+      source_grid_name: era5-r025
+  
+  hourly-r025-atm3d:
     <<: *base-default
     description: hourly 3D atmospheric data on regular r025 grid (1440x721).
     args:
@@ -108,7 +148,6 @@ sources:
     metadata:
       <<: *metadata-default
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/production_fdb_tco1279_historic/REGULARLL_grids/etc/fdb/config.yaml
-      source_grid_name: lon-lat
+      source_grid_name: era5-r025
       levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
       variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
-
