set multi/io grid as era5-r025

--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -127,7 +127,7 @@ sources:
     metadata:
       <<: *metadata-default
       fdb_path: /project/project_465000454/experiments/a0h3/fdb/REGULARLL_grids/etc/fdb/config.yaml
-      source_grid_name: lon-lat
+      source_grid_name: era5-r025
 
   hourly-r025-atm3d:
     <<: *base-default
@@ -145,7 +145,7 @@ sources:
     metadata:
       <<: *metadata-default
       fdb_path: /project/project_465000454/experiments/a0h3/fdb/REGULARLL_grids/etc/fdb/config.yaml
-      source_grid_name: lon-lat
+      source_grid_name: era5-r025
       levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
       variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
 
@@ -226,7 +226,7 @@ sources:
       <<: *metadata-default
       fdb_path: /project/project_465000454/experiments/a0h3/fdb/REGULARLL_grids/etc/fdb/config.yaml
       variables:  [263000, 263001, 263003, 263004, 263008, 263009, 263021, 263022, 263100, 263101, 263121, 263122, 263124]
-      source_grid_name: lon-lat
+      source_grid_name: era5-r025
 
   daily-r025-oce3d:
     <<: *base-default
