--- a/cli/grid-from-data/config-hpx-nemo.yaml
+++ b/cli/grid-from-data/config-hpx-nemo.yaml
@@ -6,7 +6,6 @@ var: avg_sos
 
 # These are needed for grid conversion with CDO
 zoom: 7
-nside: 128
 nested: True # otherwise ring
 
 # These are extra info:
@@ -14,4 +13,6 @@ nested: True # otherwise ring
 model_name: nemo
 3d: False # 2d or 3d
 # tmp folder for the grid generation
-tmp: /scratch/project_465000454/nurissom/healpix_grid_generation/
+tmp: /scratch/project_465000454/nurissom/healpix_grid_generation
+# target folder for the grid generated
+tgt: /scratch/project_465000454/nurissom/healpix_grid_generation
