--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -45,6 +45,11 @@ grids:
     space_coord: ["ncells"]
     vert_coord: ["2d"]
     path: $grids/HealPix/hpz10_ring_atm.nc
+  
+  # Oceanic Healpix
+  nemo-hpz7-nested:
+    space_coord: ["ncells"]
+    path: $grids/HealPix/nemo_hpz7_nested_oce.nc
 
   #IFS
   tco79:
