--- a/config/machines/lumi/catalog/ERA5/era5.yaml
+++ b/config/machines/lumi/catalog/ERA5/era5.yaml
@@ -7,6 +7,7 @@ sources:
     description: ERA5 monthly data from 1940 to 2022
     driver: netcdf
     metadata:
+      fixer_name: ERA5-monthly
       source_grid_name: era5-r025
     args:
       urlpath: '{{DATA_PATH}}/ERA5/mon/ERA5_*_mon_full*.nc'
@@ -19,6 +20,7 @@ sources:
     driver: netcdf
     metadata:
       source_grid_name: era5-r025
+      fixer_name: ERA5-daily
     args:
       urlpath: '{{DATA_PATH}}/ERA5/day/ERA5_*_day_full*.nc'
       chunks: 
@@ -29,6 +31,7 @@ sources:
     description: ERA5 hourly data from 1940 to 2022
     driver: netcdf
     metadata:
+      fixer_name: ERA5-hourly
       source_grid_name: era5-r025
     args:
       urlpath: '{{DATA_PATH}}/ERA5/1hr/ERA5_*_1hr_full*.nc'
