--- a/config/machines/ci/catalog/ICON/test-r2b0.yaml
+++ b/config/machines/ci/catalog/ICON/test-r2b0.yaml
@@ -4,6 +4,7 @@ plugins:
 sources:
   short:
     metadata:
+      fixer_name: ICON-test-r2b0
       source_grid_name: test-r2b0
     args:
       chunks:
