--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -50,9 +50,20 @@ grids:
   nemo-hpz7-nested:
     space_coord: ["ncells"]
     path: $grids/HealPix/nemo_hpz7_nested_oce.nc
+  nemo-hpz7-nested-3d:
+    path:
+      level: $grids/HealPix/nemo_hpz7_nested_oce_level.nc
+    space_coord: ["ncells"]
+    vert_coord: ["level"]
+    #path: $grids/HealPix/nemo_hpz7_nested_oce_level.nc
   nemo-hpz10-nested:
     space_coord: ["ncells"]
     path: $grids/HealPix/nemo_hpz10_nested_oce.nc
+  nemo-hpz10-nested-3d:
+    path:
+      level: $grids/HealPix/nemo_hpz10_nested_oce_level.nc
+    space_coord: ["ncells"]
+    vert_coord: ["level"]
 
   #IFS
   tco79:
