--- a/config/machines/lumi/catalog/IFS-FESOM/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-FESOM/historical-1990.yaml
@@ -19,8 +19,8 @@ sources:
         param: 167
         levtype: sfc
         step: 0
-      data_start_date: 19900101T0000
-      data_end_date: 19900329T2300
+      data_start_date: auto
+      data_end_date: auto
       aggregation: D  # Default aggregation / chunk size
       savefreq: H  # at what frequency are data saved
       timestep: H  # base timestep for step timestyle
