--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -53,7 +53,7 @@ sources:
         850, 925, 1000]
       variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
 
-  hourly-hpxstd-atm2d:
+  hourly-hpz7-atm2d:
     <<: *base-default
     description: hourly 2D atmospheric data on healpix grid (zoom=7, h128).
     args:
@@ -67,7 +67,7 @@ sources:
         /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
       source_grid_name: hpz7-nested
 
-  hourly-hpxstd-atm3d:
+  hourly-hpz7-atm3d:
     <<: *base-default
     description: hourly 3D atmospheric data on healpix grid (zoom=7, h128).
     args:
@@ -89,7 +89,7 @@ sources:
       variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
       source_grid_name: hpz7-nested
 
-  hourly-hpxhigh-atm2d:
+  hourly-hpz10-atm2d:
     <<: *base-default
     description: hourly 2D atmospheric data on healpix grid (zoom=10, h1024).
     args:
@@ -103,7 +103,7 @@ sources:
         /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
       source_grid_name: hpz10-nested
 
-  hourly-hpxhigh-atm3d:
+  hourly-hpz10-atm3d:
     <<: *base-default
     description: hourly 3D atmospheric data on healpix grid (zoom=10, h1024).
     args:
@@ -284,7 +284,7 @@ sources:
       variables: [263500, 263501, 263505, 263506, 263507]
       source_grid_name: lon-lat
 
-  daily-hpxstd-oce2d:
+  daily-hpz7-oce2d:
     <<: *base-default
     description: daily 2D oceanic data on healpix grid (zoom=7, h128).
     args:
@@ -304,7 +304,7 @@ sources:
         263100, 263101, 263121, 263122, 263124]
       source_grid_name: nemo-hpz7-nested
 
-  daily-hpxhigh-oce2d:
+  daily-hpz10-oce2d:
     <<: *base-default
     description: daily 2D oceanic data on healpix grid (zoom=10, h1024).
     args:
@@ -324,7 +324,7 @@ sources:
         263100, 263101, 263121, 263122, 263124]
       source_grid_name: nemo-hpz10-nested
 
-  daily-hpxstd-oce3d:
+  daily-hpz7-oce3d:
     <<: *base-default
     description: daily 3D oceanic data on healpix grid (zoom=7, h128).
     args:
@@ -366,7 +366,7 @@ sources:
       variables: [263500, 263501, 263505, 263506, 263507]
       source_grid_name: nemo-hpz7-nested-3d
 
-  daily-hpxhigh-oce3d:
+  daily-hpz10-oce3d:
     <<: *base-default
     description: daily 3D oceanic data on healpix grid (zoom=10, h1024).
     args:
