change of aggregation for 3D data

--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -185,7 +185,7 @@ sources:
     description: daily 3D oceanic data on native grid eORCA12.
     args:
       <<: *args-default
-      aggregation: M
+      aggregation: D
       savefreq: D
       request:
         <<: *request-default
@@ -247,7 +247,7 @@ sources:
     description: daily 3D oceanic data on regular r025 grid (1440x721).
     args:
       <<: *args-default
-      aggregation: M
+      aggregation: D
       savefreq: D
       request:
         <<: *request-default
