--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -240,7 +240,7 @@ sources:
         /project/project_465000454/experiments/a0h3/fdb/REGULARLL_grids/etc/fdb/config.yaml
       variables: [263000, 263001, 263003, 263004, 263008, 263009, 263021, 263022,
         263100, 263101, 263121, 263122, 263124]
-      source_grid_name: era5-r025
+      source_grid_name: nemo-multiIO-r025
 
   daily-r025-oce3d:
     <<: *base-default
@@ -282,7 +282,7 @@ sources:
         4888.06982421875, 5089.478515625, 5291.68310546875, 5494.5751953125, 5698.060546875,
         5902.0576171875]
       variables: [263500, 263501, 263505, 263506, 263507]
-      source_grid_name: lon-lat
+      source_grid_name: nemo-multiIO-r025-3d
 
   daily-hpz7-oce2d:
     <<: *base-default
