--- a/config/fixes/ICON.yaml
+++ b/config/fixes/ICON.yaml
@@ -143,7 +143,7 @@ fixer_name:
                 grib: true
     ICON-test-r2b0: 
         data_model: false
-        parent: ICON-hpx
+        parent: ICON-default
 
 models:
     ICON:
