IFS fixer update

--- a/config/machines/ci/catalog/IFS/test-tco79.yaml
+++ b/config/machines/ci/catalog/IFS/test-tco79.yaml
@@ -4,6 +4,7 @@ plugins:
 sources:
   short:
     metadata:
+      fixer_name: test-tco79
       source_grid_name: tco79
     args:
       chunks:
@@ -25,6 +26,7 @@ sources:
     driver: netcdf
   short_nn:
     metadata:
+      fixer_name: ifs-ci-test
       source_grid_name: tco79-nn
     args:
       chunks:
@@ -35,6 +37,7 @@ sources:
     driver: netcdf
   long:
     metadata:
+      fixer_name: test-tco79
       source_grid_name: lon-lat
     args:
       chunks:
