--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -53,6 +53,14 @@ grids:
     path: $grids/HealPix/hpz10_ring_atm.nc
   
   # Oceanic Healpix
+  nemo-hpz5-nested:
+    space_coord: ["ncells"]
+    path: $grids/HealPix/nemo_hpz5_nested_oce.nc
+  nemo-hpz5-nested-3d:
+    path:
+      level: $grids/HealPix/nemo_hpz5_nested_oce_level.nc
+    space_coord: ["ncells"]
+    vert_coord: ["level"]
   nemo-hpz7-nested:
     space_coord: ["ncells"]
     path: $grids/HealPix/nemo_hpz7_nested_oce.nc
