--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -266,3 +266,7 @@ models:
                         attributes: 
                             mickey: 'mouse'
 
+        test-fdb:
+            fdb-levels:
+                method: replace
+
