test fixer for nolevels as well

--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -269,4 +269,5 @@ models:
         test-fdb:
             fdb-levels:
                 method: replace
-
+            fdb-nolevels:
+                method: replace
