--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990-dev-lowres.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990-dev-lowres.yaml
@@ -23,7 +23,7 @@ sources:
       aggregation: M  # Default aggregation / chunk size
       savefreq: H  # at what frequency are data saved
       timestep: H  # base timestep for step timestyle
-      timestyle: step  # variable date or variable step
+      timestyle: date  # variable date or variable step
     description: hourly atmospheric 2D data on native grid TCo79.
     driver: gsv
     metadata: &metadata-default
