--- a/diagnostics/ecmean/config/ecmean_config_destine-v1.yml
+++ b/diagnostics/ecmean/config/ecmean_config_destine-v1.yml
@@ -2,7 +2,7 @@
 interface: AQUA
 # Choice of model name. It is printed in the output table
 model:
-  name: AQUA
+  name: ClimateDT
 
 dirs:
   exp: '' #not necessary we use xarray dataset instead of files
@@ -12,17 +12,17 @@ dirs:
 
 global:
   atm_vars: [tas, psl, pr, evspsbl, pme, cll, clm, clh,
-            pr_oce, pme_oce, pr_land, pme_land
-            rsnt, rlnt, net_toa, rsns, rlns, hfss, hfls, net_sfc_nosn]
+            pr_oce, pme_oce, pr_land, pme_land,
+            rsnt, rlnt, net_toa, rsns, rlns, hfss, hfls]
   oce_vars: [tos, sos]
-  ice_vars: [siconc]
+  ice_vars: []
   tab_vars: []
   regions: ['Global', 'North Midlat', 'Tropical', 'South Midlat']
   seasons: ['ALL', 'DJF', 'JJA']
 
 PI:
   2d_vars:
-    field: [tas, pr, psl, tauu, tauv]
+    field: [net_sfc, tas, pr, psl, tauu, tauv]
   3d_vars:
     field: [ta, ua, va, hus]
   oce_vars:
