--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -19,7 +19,7 @@ sources:
         levtype: sfc
         step: 0
       data_start_date: 19900101T0000
-      data_end_date: auto
+      data_end_date: 19951231T2300
       aggregation: D  # Default aggregation / chunk size
       savefreq: H  # at what frequency are data saved
       timestep: H  # base timestep for step timestyle
