new structuring of ocean3d

--- a/diagnostics/ocean3d/cli/config.yaml
+++ b/diagnostics/ocean3d/cli/config.yaml
@@ -1,8 +1,17 @@
-model: FESOM 
-exp: tco2559-ng5-cycle3
+model: IFS-NEMO 
+exp: historical-1990
 source: lra-r100-monthly
+
+# model: NEMO 
+# exp: nemo-test-data
+# source: nemo-spinup-exp-5744567
+
 outputdir: ./output
 # "--model FESOM --exp tco2559-ng5-cycle3 --source $source"
+
+time_selection : True
+start_year : 1991
+end_year : 1992
 
 predefined_regions:
   - Indian Ocean
