era5 source with new fixes

--- a/config/fixes/destine-v1.yaml
+++ b/config/fixes/destine-v1.yaml
@@ -21,9 +21,12 @@ fixer_name:
                 grib: true 
                 source: TCC
                 units: frac
-            sst:
+            avg_tos:
                 grib: true
                 source: SSTK
+            avg_siconc:
+                grib: true
+                source: CI
             mslhf:
                 src_units: J m**-2 day**-1
                 source: SLHF
